# apis/aou_api/src/handlers/helpers/s3.go
@@ -13,13 +13,30 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// GetS3Object retrieves an object from S3 and returns it as a byte slice.
-func GetS3Object(c *gin.Context) {
-	bucket := c.Query("bucket")
-	key := c.Query("key")
+type S3ObjectParams struct {
+	// Bucket is the name of the S3 bucket
+	// Example: my-bucket
+	Bucket string `form:"bucket" binding:"required"`
 
-	if bucket == "" || key == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Bucket and key are required"})
+	// Key is the key of the object in the S3 bucket
+	// Example: path/to/my/object.txt
+	Key string `form:"key" binding:"required"`
+}
+
+// GetS3Object retrieves an object from S3 and returns it as a byte slice.
+// @Description Retrieves an object from S3 given a bucket and key.
+// @ID get-s3-object
+// @Produce octet-stream
+// @Param bucket query string true "S3 Bucket"
+// @Param key query string true "S3 Key"
+// @Success 200 {string} string "Successful operation"
+// @Failure 400 {object} map[string]interface{} "Invalid query parameters"
+// @Failure 500 {object} map[string]interface{} "Internal server error"
+// @Router /secure/helper/s3-object [get]
+func GetS3Object(c *gin.Context) {
+	var params S3ObjectParams
+	if err := c.ShouldBindQuery(&params); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid query parameters"})
 		return
 	}
 
@@ -35,12 +52,12 @@ func GetS3Object(c *gin.Context) {
 	client := s3.NewFromConfig(cfg)
 
 	resp, err := client.GetObject(ctx, &s3.GetObjectInput{
-		Bucket: aws.String(bucket),
-		Key:    aws.String(key),
+		Bucket: aws.String(params.Bucket),
+		Key:    aws.String(params.Key),
 	})
 
 	if err != nil {
-		log.Printf("unable to get object %s from bucket %s, %v", key, bucket, err)
+		log.Printf("unable to get object %s from bucket %s, %v", params.Key, params.Bucket, err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "internal server error"})
 		return
 	}
@@ -49,7 +66,7 @@ func GetS3Object(c *gin.Context) {
 
 	data, err := io.ReadAll(resp.Body)
 	if err != nil {
-		log.Printf("unable to read object %s from bucket %s, %v", key, bucket, err)
+		log.Printf("unable to read object %s from bucket %s, %v", params.Key, params.Bucket, err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "internal server error"})
 		return
 	}
